plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
    id 'com.diffplug.spotless' version '6.23.3'
}

group = 'com.grabbler'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}


dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.postgresql:postgresql:42.2.19'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    //implementation 'io.swagger.core.v3:swagger-gradle-plugin:2.2.36'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    implementation 'io.jsonwebtoken:jjwt-impl:0.13.0'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.13.0'
    implementation 'org.springframework.retry:spring-retry:2.0.12'
    implementation 'com.stripe:stripe-java:30.0.0'



    // https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api
    implementation 'org.modelmapper:modelmapper:3.2.0'

    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'
    
    testImplementation 'com.h2database:h2' 
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

    testCompileOnly 'org.projectlombok:lombok:1.18.34'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'

    testImplementation 'org.hamcrest:hamcrest:2.2'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    // Lombok for tests
    testCompileOnly 'org.projectlombok:lombok:1.18.34'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'

}

spotless {
    java {
        // Use Google Java Format (industry standard)
        googleJavaFormat('1.18.1')
        
        // Additional cleanup
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
        
        // Don't format generated files
        targetExclude 'build/**'
    }
}

testing {
  suites {
    test {
      useJUnitJupiter()
    }
  }
}


tasks.named('test') {
	useJUnitPlatform()
      // Add this to see more detailed output
    testLogging {
        events "failed"//"passed", "skipped", "failed"
        exceptionFormat "full"
        //showStandardStreams = true
    }
}
